# secrets

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  TODO.md  Vagrantfile  bootstrap.sh  build.rs  dev.sh  rustfmt.toml  shell.sh  test.sh
src/: api.rs  api.rs.in  client.rs  client_cmd.rs  common.rs  getpass.rs  keys.rs  lib.rs  password.rs  server.rs  server_cmd.rs  server_db.rs  utils.rs
src/client/: client.rs  client_cmd.rs
src/server/: listener.rs  server.rs  server_cmd.rs
