[package]
name = "secrets"
version = "0.1.0"
authors = ["David King <dking@ketralnis.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "0.7.14"

[dependencies]
byteorder = "1.0.0"
chrono = "0.3.1"
clap = "2.24.2"
env_logger = "0.4.3"
flate2 = "0.2.19"
hyper = {version="0.9.7", features=["openssl"]}
libc = "0.2.23"
log = "0.3.6"
openssl = "0.7.13"
quick-error = "1.1.0"
regex = "0.1.71"
rfc1751 = "0.1.0"
rusqlite = "0.12.0"
rustc-serialize = "0.3.19"
serde = "0.7.8"
serde_json = "0.7.4"
sodiumoxide = "0.0.12"
tempdir = "0.3"
tempfile = "2.1.4"
url = "1.0"
