cargo-features = ["edition"]

[package]
name = "secrets"
version = "0.1.1"
authors = ["David King <dking@ketralnis.com>"]
edition = '2018'

[build-dependencies]
serde_codegen = "0.7.14"

[dependencies]
byteorder = "1.0.0"
chrono = "0.4"
clap = "2.32.0"
dirs = "1.0.2"
env_logger = "0.4.3"
failure = "0.1.1"
flate2 = "0.2.19"
hyper = {version="0.9.7", features=["openssl"]}
libc = "0.2.42"
log = "0.3.8"
openssl = "0.7.13"
regex = "0.2.2"
rfc1751 = "0.1.0"
rusqlite = "0.12.0"
rustc-serialize = "0.3.24"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.2"
sodiumoxide = "0.0.15"
tempdir = "0.3.5"
tempfile = "2.1.5"
url = "1.4.1"
